--- a/biciMAD_notebook.ipynb
+++ b/biciMAD_notebook.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f3ef2538",
    "metadata": {},
    "source": [
     "# Práctica BiciMad Grupo 20\n",
     "\n",
     "Por Lucía del Nido Herranz, Víctor Güejes Cepeda y Celia Vaquero Espinosa\n",
     "\n",
-    "En esta práctica vamos a realizar un estudio sobre los datos de BiciMad de todos los meses del año 2018. Para ello vamos a utilizar los DataFrames de Spark en python.\n"
+    "En esta práctica vamos a realizar un estudio sobre los datos del año 2018 del servicio de bicicletas BiciMad de la Comunidad de Madrid que podemos encontrar en el siguiente enlace: https://opendata.emtmadrid.es/Datos-estaticos/Datos-generales-(1) .Para ello vamos a utilizar los DataFrames de Spark en python.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "605e558e",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "69bb732e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "625af83d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1e75e6aa",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +134,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1776ab6",
    "metadata": {},
    "source": [
     "# Rangos de edades\n",
@@ -161,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bd6571d1",
    "metadata": {
     "scrolled": false
    },
@@ -207,15 +200,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e6ef93d",
    "metadata": {},
    "source": [
-    "Como podemos ver, el rango de edad que más ha utilizador este servicio es el 4, y el que menos el 6. Esto prueba nuestra hipótesis inicial, ya que la gente que puede usar el abono joven en vez del abono general, prefiere usar transporte público a BiciMad"
+    "Como podemos ver, el rango de edad que más ha utilizado este servicio es el 4, y el que menos el 6. Esto prueba nuestra hipótesis inicial, ya que la gente que puede usar el abono joven en vez del abono general, prefiere usar transporte público a BiciMad"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b7b1be54",
    "metadata": {},
    "source": [
     "# Residencia\n",
@@ -228,13 +219,12 @@
     "    2: Usuario ocasional\n",
     "    3: Trabajador de la empresa\n",
     "\n",
-    "Nos quedamos con los usuarios del tipo 1 y quitamos los usuarios sin codigo postal:"
+    "Quitamos los usuarios sin codigo postal:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5c4205b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +233,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d88c267",
    "metadata": {},
    "source": [
     "Convertimos los códigos postales a enteros."
@@ -252,7 +241,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "35bb953d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +249,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02aa27e1",
    "metadata": {},
    "source": [
     "Agrupamos entre los que son de madrid (zip_code empieza por 28) y los que no. Nos libramos de los valores nulos y hacemos el recuento final:"
@@ -270,7 +257,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1a1a61d2",
    "metadata": {
     "scrolled": true
    },
@@ -315,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64f10346",
    "metadata": {},
    "source": [
     "# Viajes por usuario\n",
@@ -328,7 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "897bc96a",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +371,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be837ddf",
    "metadata": {},
    "source": [
     "Ahora nos interesa saber cuántos viajes realiza en un día cada usuario:"
@@ -396,7 +379,6 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "4ff56125",
    "metadata": {
     "scrolled": true
    },
@@ -465,7 +447,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0955d1dc",
    "metadata": {},
    "source": [
     "Vamos a ver cuántos usuarios han realizado 1 viaje por día, 2 viajes, 3 viajes... "
@@ -474,7 +455,6 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a02dd187",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +519,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff25cf4",
    "metadata": {},
    "source": [
     "# Viajes de ida y vuelta\n",
@@ -550,7 +529,6 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "43b5bc67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +542,6 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7eb021fd",
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +600,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c40196",
    "metadata": {},
    "source": [
     "Por último realizamos el recuento:"
@@ -632,7 +608,6 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f0fce0b0",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +645,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "294695da",
    "metadata": {},
    "source": [
     "Como vemos, se realizan 168597 viajes de ida y vuelta en total."
@@ -678,7 +652,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9d2f46",
    "metadata": {},
    "source": [
     "# Duración de los viajes\n",
@@ -695,7 +668,6 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "6ba6bcdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +683,6 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3de8affe",
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +753,6 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "e9068004",
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +799,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09c829d6",
    "metadata": {},
    "source": [
     "Los trayectos de duración media son los más comunes, seguidos de los cortos y por último los largos."
@@ -837,7 +806,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c68d18",
    "metadata": {},
    "source": [
     "# Épocas de mayor y menor uso\n",
@@ -849,7 +817,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "0d55ca0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -863,7 +830,6 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "50997a58",
    "metadata": {
     "scrolled": true
    },
@@ -983,7 +949,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61e48655",
    "metadata": {},
    "source": [
     "Los resultados devuelven que los días que menos se usó BiciMad son el 30 y el 25 de mayo, el 1 de enero de 2019 y el 29 de agosto. Estos resultados creemos que no son del todo correctos y pueden ser días en los que falló el servicio. \n",
@@ -994,7 +959,6 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "dda888d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +971,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f502e220",
    "metadata": {},
    "source": [
     "Hacemos el mismo proceso para ver qué meses ha habido más trayectos:"
@@ -1016,7 +979,6 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "422ce87f",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1030,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aec396f",
    "metadata": {},
    "source": [
     "El mes más concurrido fue septiembre, lo cual es comprensible por el buen tiempo y la vuelta a las clases. El que menos fue marzo, sospechamos que puede tener que ver con que Semana Santa cayó en este mes y por la época de alergias que, aunque la temperatura acompañe, no lo hace tanto a la conducción de las bicis. No tenemos en cuenta enero del 2019 porque sólo contabiliza el día 1 de enero."
@@ -1076,7 +1037,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17992d4b",
    "metadata": {},
    "source": [
     "# Estaciones más concurridas\n",
@@ -1087,7 +1047,6 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "2857c418",
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1143,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb60f03c",
    "metadata": {},
    "source": [
     "La estación a la que llegan más bicicletas es la 135, y corresponde a una estación entre Nuevos Ministerios y Gregorio Marañón, y de la que menos la 2008."
@@ -1192,7 +1150,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5230bd9",
    "metadata": {},
    "source": [
     "A continuación vemos la más concurrida como estación de origen:"
@@ -1201,7 +1158,6 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "f6a3b917",
    "metadata": {
     "scrolled": true
    },
@@ -1300,7 +1256,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46f6df1b",
    "metadata": {},
    "source": [
     "La estación de la que salen más bicicletas es la 135 y de la que menos la 2008. \n",
@@ -1310,7 +1265,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b1b4bfe",
    "metadata": {},
    "source": [
     "# Trayectos según rangos de edad\n",
@@ -1321,7 +1275,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "5c87a797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1289,6 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "cb46534f",
    "metadata": {
     "scrolled": true
    },
@@ -1383,7 +1335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc174be4",
    "metadata": {},
    "source": [
     "El rango de edad que realiza menos viajes largos son los mayores de 66, lo cual tiene sentido, y el que más los de 27 a 40 años."
@@ -1392,7 +1343,6 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "21e7db28",
    "metadata": {},
    "outputs": [
     {
@@ -1436,7 +1386,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9014480b",
    "metadata": {},
    "source": [
     "El rango de edad que realiza menos viajes medios son los de 0 a 16 y el que más los de 27-40 años."
@@ -1445,7 +1394,6 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "54e19810",
    "metadata": {
     "scrolled": true
    },
@@ -1491,7 +1439,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda43b1a",
    "metadata": {},
    "source": [
     "El rango de edad que realiza menos viajes largos son los mayores de 66 y el que más los de 27 a 40 años (igual que en los viajes largos)."
@@ -1499,7 +1446,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2418e68c",
    "metadata": {},
    "source": [
     "Construimos un dataFrame que nos junte la información para poder compararla."
@@ -1508,7 +1454,6 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "eda251bf",
    "metadata": {},
    "outputs": [
     {
@@ -1547,23 +1492,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es cuioso que en el rango 1 (0-16 años) abunden tanto los viajes largos en comparación a los medios. En general, los viajes medios son algo más abundantes que los cortos y los largos son de los que menos cantidad hay."
+    "Es curioso que en el rango 1 (0-16 años) abunden tanto los viajes largos en comparación a los medios. En general, los viajes medios son algo más abundantes que los cortos y los largos son de los que menos cantidad hay."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cd05874b",
    "metadata": {},
    "source": [
     "# Estudio del rango de edad\n",
     "\n",
-    "Vamos a realizar un estudio de los usuarios para cada rango de edad, para obtener la estación más concurrida para cada uno y de donde son residentes dichos usuarios principalmente ."
+    "Vamos a realizar un estudio de los usuarios para cada rango de edad, para obtener la estación más concurrida para cada uno y de dónde son residentes dichos usuarios principalmente ."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "3d34f812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1526,6 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "33053015",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1603,7 +1545,6 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "03aea5eb",
    "metadata": {},
    "outputs": [
     {
@@ -2747,7 +2688,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7183189a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2769,7 +2709,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
